config OG tags for react-helmt-async

--- a/cs-law-spa-pwa/index.html
+++ b/cs-law-spa-pwa/index.html
@@ -5,6 +5,19 @@
     <link rel="icon" type="image/svg+xml" href="/csa-logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>The Law Firm of Conrad Szewczyk & Associates</title>
+    <meta name='description' content='Conrad Szewczyk & Associates, unwavering dedication to justice and a commitment to excellence in the legal profession.' />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content='Conrad Szewczyk & Associates' />
+    <meta property="og:description" content='Conrad Szewczyk & Associates, unwavering dedication to justice and a commitment to excellence in the legal profession.' />
+    <meta property="og:image" content="/csa-logo.png" />
+    <meta property="og:url" content="https://cs-law-spa-pwa.vercel.app/" />
+      { /* End Facebook tags */}
+      { /* Twitter tags */}
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:title" content="Conrad Szewczyk & Associates" />
+    <meta name="twitter:description" content="Conrad Szewczyk & Associates, unwavering dedication to justice and a commitment to excellence in the legal profession." />
+    <meta property="twitter:image" content="/csa-logo.png"></meta>
+      { /* End Twitter tags */}
   </head>
   <body>
     <div id="root"></div>
