config OG tags for react-helmt-async

--- a/cs-law-spa-pwa/index.html
+++ b/cs-law-spa-pwa/index.html
@@ -9,14 +9,14 @@
     <meta property="og:type" content="website" />
     <meta property="og:title" content='Conrad Szewczyk & Associates' />
     <meta property="og:description" content='Conrad Szewczyk & Associates, unwavering dedication to justice and a commitment to excellence in the legal profession.' />
-    <meta property="og:image" content="csa-logo.png" />
+    <meta property="og:image" content="https://cs-law-spa-pwa.vercel.app/csa-logo.png" />
     <meta property="og:url" content="https://cs-law-spa-pwa.vercel.app/" />
       { /* End Facebook tags */}
       { /* Twitter tags */}
-    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Conrad Szewczyk & Associates" />
     <meta name="twitter:description" content="Conrad Szewczyk & Associates, unwavering dedication to justice and a commitment to excellence in the legal profession." />
-    <meta property="twitter:image" content="csa-logo.png"></meta>
+    <meta property="twitter:image" content="https://cs-law-spa-pwa.vercel.app/csa-logo.png"></meta>
       { /* End Twitter tags */}
   </head>
   <body>
