--- a/cs-law-spa-pwa/index.html
+++ b/cs-law-spa-pwa/index.html
@@ -18,6 +18,9 @@
     <meta name="twitter:description" content="Conrad Szewczyk & Associates, unwavering dedication to justice and a commitment to excellence in the legal profession." />
     <meta property="twitter:image" content="https://cs-law-spa-pwa.vercel.app/assets/og-csa-logo.png"></meta>
       { /* End Twitter tags */}
+      <meta http-equiv="Cache-Control" content="no-store, no-cache, must-revalidate"/>
+      <meta http-equiv="Pragma" content="no-cache"/>
+      <meta http-equiv="Expires" content="0"/>
   </head>
   <body>
     <div id="root"></div>
