config OG tags for react-helmt-async

--- a/cs-law-spa-pwa/index.html
+++ b/cs-law-spa-pwa/index.html
@@ -16,7 +16,7 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Conrad Szewczyk & Associates" />
     <meta name="twitter:description" content="Conrad Szewczyk & Associates, unwavering dedication to justice and a commitment to excellence in the legal profession." />
-    <meta property="twitter:image" content="https://cs-law-spa-pwa.vercel.app/assets/og-csa-logo.png"></meta>
+    <meta property="twitter:image" content="https://cs-law-spa-pwa.vercel.app/assets/tw-csa-logo.png"></meta>
       { /* End Twitter tags */}
       <meta http-equiv="Cache-Control" content="no-store, no-cache, must-revalidate"/>
       <meta http-equiv="Pragma" content="no-cache"/>
